Bug 71286 - [945/PNV]Rendercheck blend fails
Summary: [945/PNV]Rendercheck blend fails
Status: VERIFIED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high major
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-06 03:12 UTC by lu hua
Modified: 2013-11-11 05:46 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description lu hua 2013-11-06 03:12:10 UTC
System Environment:
--------------------------
Platform:  PNV/945gm
Libdrm:		(master)2.4.47-2-g45810d3d7546f3ddbcdae114c6726ada30e919c9
Mesa:		(master)86cdff56353a223d3c9c1cd24bc83a1799eaa6d9
Xf86_video_intel:(master)2.99.905-67-ga0d1de962a8107cfcaefd82eb8ffaf3e4da0e130
Cairo:		(master)98fef3cef2d0f7f463a2e4f9f1b35b09f7b6ea77
Libva:		(staging)1a011ce5bb0b80506797a25a988854f3f81ce909
Libva_intel_driver:		(staging)1cee858036a87837deddc87586701ed869f96261
Kernel:	(drm-intel-nightly) 164a4cb4c1431a0689f85507868356fae24da638

Bug detailed description:
---------------------------
It fails on 945gm and pineview.
Bisect shows:587c4866652e40e1e228b333028114766a6d3b08 is the first bad commit.
commit 587c4866652e40e1e228b333028114766a6d3b08
Author:     Chris Wilson <chris@chris-wilson.co.uk>
AuthorDate: Mon Nov 4 15:10:40 2013 +0000
Commit:     Chris Wilson <chris@chris-wilson.co.uk>
CommitDate: Mon Nov 4 15:12:37 2013 +0000

    sna: Promote uint16_t to a full int to avoid overflow in computing w*h in me

    Reported-by: Conley Moorhous <conleymoorhous@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=70527
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

output:
rendercheck 1.4
Render extension version 0.11
Window format: r8g8b8
Found server-supported format: a8
Found server-supported format: a8r8g8b8
Found server-supported format: x8r8g8b8
Found server-supported format: b8g8r8a8
Found server-supported format: b8g8r8x8
Found server-supported format: r8g8b8
Found server-supported format: b8g8r8
Found server-supported format: r5g5b5
Found server-supported format: b5g5r5
Found server-supported format: x1r5g5b5
Found server-supported format: x1b5g5r5
Found server-supported format: r5g6b5
Found server-supported format: b5g6r5
Found server-supported format: x8b8g8r8
Found server-supported format: x2r10g10b10
Found server-supported format: x2b10g10r10
Beginning blend test on a8
Beginning blend test on a8r8g8b8
Beginning blend test on x8r8g8b8
Beginning blend test on b8g8r8a8
Src blend test error of 255.0000 at (0, 0) --
           R     G     B     A
got:       0.000 0.000 0.000 0.000
expected:  1.000 1.000 1.000 1.000
src color: 1.00 1.00 1.00 1.00 (b8g8r8x8)
dst color: 1.00 1.00 1.00 1.00
src: 10x10 b8g8r8x8, dst: b8g8r8a8
Beginning blend test on b8g8r8x8
Beginning blend test on r8g8b8
Beginning blend test on b8g8r8
Beginning blend test on r5g5b5
Beginning blend test on b5g5r5
Beginning blend test on x1r5g5b5
Beginning blend test on x1b5g5r5
Beginning blend test on r5g6b5
Beginning blend test on b5g6r5
Beginning blend test on x8b8g8r8
Beginning blend test on x2r10g10b10
Beginning blend test on x2b10g10r10
Beginning blend test on r8g8b8 window
16 tests passed of 17 total
Successful Groups:

Reproduce steps:
----------------------------
1. xinit&
2. ./rendercheck -o src,over,overreverse,xor -t blend
Comment 1 Chris Wilson 2013-11-06 09:43:33 UTC
commit c3d5b1d8fcb1b65c35827d38bf5b309e433d0907
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Nov 6 09:40:56 2013 +0000

    sna: Move initialisation of loop counter to common code
    
    It was only being defined in x86-64 and left unitialized for x86-32.
    
    Fixes regression from
    commit 587c4866652e40e1e228b333028114766a6d3b08
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Mon Nov 4 15:10:40 2013 +0000
    
        sna: Promote uint16_t to a full int to avoid overflow in computing w*h in memcpy_xor
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=71286
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 2 lu hua 2013-11-11 05:46:36 UTC
Verified.Fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.